--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 .demo-card-wide > .mdl-card__title {
     color: #fff;
     height: 270px;
-    background: url('sample nhdc_1.png') center / cover;
+    background: url('https://i.ibb.co/3RNtS2F/sample-nhdc-1.png') center / cover;
 }
 
 .demo-card-wide > .mdl-card__menu {
